error_permutacion.txt
Tarea_2/EsPermutacion.java:34: error: ')' expected
          @ ensures (\result == (\count int i; 0 <= i && i < S.length; S[i] == E);
                                       ^
Tarea_2/EsPermutacion.java:34: error: Incorrectly formed or terminated ensures statement near here
          @ ensures (\result == (\count int i; 0 <= i && i < S.length; S[i] == E);
                                        ^
Tarea_2/EsPermutacion.java:34: error: illegal start of type
          @ ensures (\result == (\count int i; 0 <= i && i < S.length; S[i] == E);
                                               ^
Tarea_2/EsPermutacion.java:34: error: <identifier> expected
          @ ensures (\result == (\count int i; 0 <= i && i < S.length; S[i] == E);
                                                ^
Tarea_2/EsPermutacion.java:34: error: Method specs may not precede a variable declaration
          @ ensures (\result == (\count int i; 0 <= i && i < S.length; S[i] == E);
                                                 ^
Tarea_2/EsPermutacion.java:34: error: ';' expected
          @ ensures (\result == (\count int i; 0 <= i && i < S.length; S[i] == E);
                                                     ^
Tarea_2/EsPermutacion.java:34: error: illegal start of type
          @ ensures (\result == (\count int i; 0 <= i && i < S.length; S[i] == E);
                                                      ^
Tarea_2/EsPermutacion.java:34: error: ';' expected
          @ ensures (\result == (\count int i; 0 <= i && i < S.length; S[i] == E);
                                                          ^
Tarea_2/EsPermutacion.java:34: error: > expected
          @ ensures (\result == (\count int i; 0 <= i && i < S.length; S[i] == E);
                                                              ^
Tarea_2/EsPermutacion.java:34: error: '(' expected
          @ ensures (\result == (\count int i; 0 <= i && i < S.length; S[i] == E);
                                                                     ^
Tarea_2/EsPermutacion.java:34: error: ']' expected
          @ ensures (\result == (\count int i; 0 <= i && i < S.length; S[i] == E);
                                                                         ^
Tarea_2/EsPermutacion.java:34: error: ';' expected
          @ ensures (\result == (\count int i; 0 <= i && i < S.length; S[i] == E);
                                                                          ^
Tarea_2/EsPermutacion.java:34: error: <identifier> expected
          @ ensures (\result == (\count int i; 0 <= i && i < S.length; S[i] == E);
                                                                           ^
Tarea_2/EsPermutacion.java:34: error: illegal start of type
          @ ensures (\result == (\count int i; 0 <= i && i < S.length; S[i] == E);
                                                                            ^
Tarea_2/EsPermutacion.java:34: error: ';' expected
          @ ensures (\result == (\count int i; 0 <= i && i < S.length; S[i] == E);
                                                                                ^
Tarea_2/EsPermutacion.java:34: error: <identifier> expected
          @ ensures (\result == (\count int i; 0 <= i && i < S.length; S[i] == E);
                                                                                 ^
Tarea_2/EsPermutacion.java:42: error: ')' expected
          @ maintaining r == (\count int j; 0 <= j && j < S.length; S[j] == E);
                                    ^
Tarea_2/EsPermutacion.java:42: error: Incorrectly formed or terminated loop_invariant statement near here
          @ maintaining r == (\count int j; 0 <= j && j < S.length; S[j] == E);
                                     ^
Tarea_2/EsPermutacion.java:42: error: not a statement
          @ maintaining r == (\count int j; 0 <= j && j < S.length; S[j] == E);
                                                   ^
Tarea_2/EsPermutacion.java:42: error: Expected a declaration or a JML construct inside the JML annotation here
          @ maintaining r == (\count int j; 0 <= j && j < S.length; S[j] == E);
                                            ^
Tarea_2/EsPermutacion.java:41: error: Loop specifications must immediately precede a loop statement
          @ maintaining 0 <= i && i <= S.length;
            ^
Tarea_2/EsPermutacion.java:42: error: not a statement
          @ maintaining r == (\count int j; 0 <= j && j < S.length; S[j] == E);
                                                                         ^
Tarea_2/EsPermutacion.java:42: error: ';' expected
          @ maintaining r == (\count int j; 0 <= j && j < S.length; S[j] == E);
                                                                             ^
Tarea_2/EsPermutacion.java:42: error: Expected a declaration or a JML construct inside the JML annotation here
          @ maintaining r == (\count int j; 0 <= j && j < S.length; S[j] == E);
                                                                    ^
24 errors
